<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.angellam.lab7_pets.MainActivity">

    <!--Your name-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name_edit"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!--Instructions-->
    <TextView
        android:text="@string/instructions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructionsTextView"
        android:layout_below="@+id/nameEditText"
        android:layout_centerHorizontal="true" />

    <!--Your pet's name-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/nameEditText"
        android:layout_marginTop="20dp"
        android:id="@+id/yourNameLinear1">

        <!--Your pet's name-->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/petname_edit"
            android:ems="10"
            android:id="@+id/petEditText" />

        <Spinner
            android:entries="@array/animal_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/animalSpinner" />
    </LinearLayout>

    <!--Radio Group-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/yourNameLinear1"
        android:id="@+id/foodRadioGroupLinear2">
        <!--Food: - Radio Group-->
        <TextView
            android:text="@string/food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:id="@+id/foodTextView" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/foodRadioGroup">

            <RadioButton
                android:text="@string/animalfood_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/animalRadioButton" />

            <RadioButton
                android:text="@string/humanfood_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/humanRadioButton" />

            <RadioButton
                android:text="@string/anythingfood_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/anythingRadioButton" />
        </RadioGroup>
    </LinearLayout>

    <!--Grumpy playful-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/foodRadioGroupLinear2"
        android:layout_marginTop="5dp"
        android:id="@+id/grumpyPlayfulLinear3">
        <ToggleButton
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/happyToggleButton" />

        <Switch
            android:text="@string/playful_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playfulSwitch"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            />
    </LinearLayout>

    <!--Group checkbox-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/grumpyPlayfulLinear3"
        android:layout_marginTop="5dp"
        android:id="@+id/checkboxGroupLinear6">
        <!--Top-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/checkbox1Linear4">
        <CheckBox
            android:text="@string/smart_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:id="@+id/smartCheckBox" />

        <CheckBox
            android:text="@string/goofy_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:id="@+id/goofyCheckBox" />
        </LinearLayout>
        <!--Bottom-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/checkbox2Linear5">
            <CheckBox
                android:text="@string/active_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:id="@+id/activeCheckBox" />

            <CheckBox
                android:text="@string/lazy_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:id="@+id/lazyCheckBox" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/checkboxGroupLinear6"
        android:layout_above="@+id/describeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/imageContentDescription"/>

    <Button
        android:text="@string/describe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/describeButton"
        android:onClick="describePet"
        android:layout_above="@+id/petDescriptionTextView"
        android:layout_centerHorizontal="true" />

    <!--Final sentence-->
    <TextView
        android:text="@string/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/petDescriptionTextView" />
</RelativeLayout>
